--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="nav">
                 <!--Logotipo del nav-->
                 <div class="content-title">
-                    <div class="content-img "></div>
+                    <div class="content-img "><a href="#"></a></div>
                     <div class="texto"><p>Contratos Cdmx</p></div>
                 </div>
                 <!--lista del nav-->
@@ -76,11 +76,14 @@
                         <h6>280 canales (165 HD)</h6>
                     </div>
                     <div class="precio-paquete">
+                        <p class="tecnico"><span class="prp">Primer pago al tecnico</span> <br> 2,400 + 170 = $2,500</p>
+                        <p class="tecnico"><span class="prp">Segundo pago de portabilidad</span> <br> 2,400 - 100 = $2,300</p>
                         <h6>+ Descuento de por vida</h6>
-                        <p class="pago">-$100 a partir del 6º mes</p>
-                        <p class="pronto-pago">Pronto Pago $ 2,400</p>
+                        <p class="pago"> a partir del 6º mes</p>
+                        <p class="pronto-pago">Mensualidad fija</p>
                     </div>
-                    <div class="link-button"><a href="tel:5548593337">Contactar</a></div>
+                    <div class="link-button"><i class="fas fa-phone-alt iconms"></i><a href="tel:5548593337">Llamar</a></div>
+                    <div class="link-button men"><i class="fab fa-whatsapp wtp"></i><a href="https://api.whatsapp.com/send?phone=52 55 4859 3337 &text=Me interesa servicio totalplay">Mensaje</a></div>
                 </div>
 
                 <!--2PAQUETE SORPRENDETE-->
@@ -101,10 +104,13 @@
                     </div>
                     <div class="precio-paquete">
                         <h6>+ Descuento de por vida</h6>
-                        <p class="pago">-$100 a partir del 6º mes</p>
-                        <p class="pronto-pago">Pronto Pago $ 1,779</p>
+                        <p class="pago"> a partir del 6º mes</p>
+                        <p class="pronto-pago">Mensualidad fija</p>
+                        <p class="tecnico"><span class="prp">Primer pago al tecnico</span> <br> 1,779 + 170 = $1,949</p>
+                        <p class="tecnico"><span class="prp">Segundo pago de portabilidad</span> <br> 1,779 - 100 = $1,679</p>
                     </div>
-                    <div class="link-button"><a href="tel:5548593337">Contactar</a></div>
+                    <div class="link-button"><i class="fas fa-phone-alt iconms"></i><a href="tel:5548593337">Llamar</a></div>
+                    <div class="link-button men"><i class="fab fa-whatsapp wtp"></i><a href="https://api.whatsapp.com/send?phone=52 55 4859 3337 &text=Me interesa servicio totalplay">Mensaje</a></div>
                 </div>
 
                 <!--3PAQUETE EMOCIONANTE-->
@@ -125,10 +131,13 @@
                     </div>
                     <div class="precio-paquete">
                         <h6>+ Descuento de por vida</h6>
-                        <p class="pago">-$80 a partir del 6º mes</p>
-                        <p class="pronto-pago">Pronto Pago $ 1,199</p>
+                        <p class="pago"> a partir del 6º mes</p>
+                        <p class="pronto-pago">Mensualidad fija</p>
+                        <p class="tecnico"><span class="prp">Primer pago al tecnico</span> <br> 1,199 + 170 = $1,369</p>
+                        <p class="tecnico"><span class="prp">Segundo pago de portabilidad</span> <br> 1,199 - 100 = $1,099</p>
                     </div>
-                    <div class="link-button"><a href="tel:5548593337">Contactar</a></div>
+                    <div class="link-button"><i class="fas fa-phone-alt iconms"></i><a href="tel:5548593337">Llamar</a></div>
+                    <div class="link-button men"><i class="fab fa-whatsapp wtp"></i><a href="https://api.whatsapp.com/send?phone=52 55 4859 3337 &text=Me interesa servicio totalplay">Mensaje</a></div>
                 </div>
 
                 <!--4PAQUETE DIVIERTETE+-->
@@ -147,10 +156,13 @@
                     </div>
                     <div class="precio-paquete">
                         <h6>+ Descuento de por vida</h6>
-                        <p class="pago">-$70 a partir del 6º mes</p>
-                        <p class="pronto-pago">Pronto Pago $ 769</p>
+                        <p class="pago"> a partir del 6º mes</p>
+                        <p class="pronto-pago">Mensualidad fija</p>
+                        <p class="tecnico"><span class="prp">Primer pago al tecnico</span> <br> 769 + 170 = $939</p>
+                        <p class="tecnico"><span class="prp">Segundo pago de portabilidad</span> <br> 769 - 100 = $669</p>
                     </div>
-                    <div class="link-button"><a href="tel:5548593337">Contactar</a></div>
+                    <div class="link-button"><i class="fas fa-phone-alt iconms"></i><a href="tel:5548593337">Llamar</a></div>
+                    <div class="link-button men"><i class="fab fa-whatsapp wtp"></i><a href="https://api.whatsapp.com/send?phone=52 55 4859 3337 &text=Me interesa servicio totalplay">Mensaje</a></div>
                 </div>
 
                 <!--5PAQUETE DIVIERTETE-->
@@ -169,10 +181,13 @@
                     </div>
                     <div class="precio-paquete">
                         <h6>+ Descuento de por vida</h6>
-                        <p class="pago">-$40 a partir del 6º mes</p>
-                        <p class="pronto-pago">Pronto Pago $ 669</p>
+                        <p class="pago"> a partir del 6º mes</p>
+                        <p class="pronto-pago">Mensualidad fija</p>
+                        <p class="tecnico"><span class="prp">Primer pago al tecnico</span> <br> 669 + 170 = $839</p>
+                        <p class="tecnico"><span class="prp">Segundo pago de portabilidad</span> <br> 669 - 100 = $569</p>
                     </div>
-                    <div class="link-button"><a href="tel:5548593337">Contactar</a></div>
+                    <div class="link-button"><i class="fas fa-phone-alt iconms"></i><a href="tel:5548593337">Llamar</a></div>
+                    <div class="link-button men"><i class="fab fa-whatsapp wtp"></i><a href="https://api.whatsapp.com/send?phone=52 55 4859 3337 &text=Me interesa servicio totalplay">Mensaje</a></div>
                 </div>  
 
             </div>
@@ -207,7 +222,8 @@
                         <p class="pago">-$80 a partir del 6º mes</p>
                         <p class="pronto-pago">Pronto Pago $ 2,200</p>
                     </div>
-                    <div class="link-button"><a href="tel:5548593337">Contactar</a></div>
+                    <div class="link-button"><i class="fas fa-phone-alt iconms"></i><a href="tel:5548593337">Llamar</a></div>
+                    <div class="link-button men"><i class="fab fa-whatsapp wtp"></i><a href="https://api.whatsapp.com/send?phone=52 55 4859 3337 &text=Me interesa servicio totalplay">Mensaje</a></div>
                 </div>
 
                 <!--2PAQUETE SORPRENDETE-->
@@ -228,7 +244,8 @@
                         <p class="pago">-$80 a partir del 6º mes</p>
                         <p class="pronto-pago">Pronto Pago $ 1,579</p>
                     </div>
-                    <div class="link-button"><a href="tel:5548593337">Contactar</a></div>
+                    <div class="link-button"><i class="fas fa-phone-alt iconms"></i><a href="tel:5548593337">Llamar</a></div>
+                    <div class="link-button men"><i class="fab fa-whatsapp wtp"></i><a href="https://api.whatsapp.com/send?phone=52 55 4859 3337 &text=Me interesa servicio totalplay">Mensaje</a></div>
                 </div>
 
                 <!--3PAQUETE EMOCIONANTE-->
@@ -249,7 +266,8 @@
                         <p class="pago">-$50 a partir del 6º mes</p>
                         <p class="pronto-pago">Pronto Pago $ 999</p>
                     </div>
-                    <div class="link-button"><a href="tel:5548593337">Contactar</a></div>
+                    <div class="link-button"><i class="fas fa-phone-alt iconms"></i><a href="tel:5548593337">Llamar</a></div>
+                    <div class="link-button men"><i class="fab fa-whatsapp wtp"></i><a href="https://api.whatsapp.com/send?phone=52 55 4859 3337 &text=Me interesa servicio totalplay">Mensaje</a></div>
                 </div>
 
                 <!--4PAQUETE DIVIERTETE+-->
@@ -270,7 +288,8 @@
                         <p class="pago">-$30 a partir del 6º mes</p>
                         <p class="pronto-pago">Pronto Pago $ 629</p>
                     </div>
-                    <div class="link-button"><a href="tel:5548593337">Contactar</a></div>
+                    <div class="link-button"><i class="fas fa-phone-alt iconms"></i><a href="tel:5548593337">Llamar</a></div>
+                    <div class="link-button men"><i class="fab fa-whatsapp wtp"></i><a href="https://api.whatsapp.com/send?phone=52 55 4859 3337 &text=Me interesa servicio totalplay">Mensaje</a></div>
                 </div>
 
                 <!--5PAQUETE DIVIERTETE-->
@@ -291,7 +310,8 @@
                         <p class="pago">-$20 a partir del 6º mes</p>
                         <p class="pronto-pago">Pronto Pago $ 529 </p>
                     </div>
-                    <div class="link-button"><a href="tel:5548593337">Contactar</a></div>
+                    <div class="link-button"><i class="fas fa-phone-alt iconms"></i><a href="tel:5548593337">Llamar</a></div>
+                    <div class="link-button men"><i class="fab fa-whatsapp wtp"></i><a href="https://api.whatsapp.com/send?phone=52 55 4859 3337 &text=Me interesa servicio totalplay">Mensaje</a></div>
                 </div>  
 
             </div>
@@ -416,7 +436,7 @@
             <div class="span-app"><span>a donde vayas</span></div>
             <div class="img-app"><img src="asset/img/multiScreen.png" alt="Imagen de la app totalplay" loading="lazy"></div>
             <div class="text-fin"><p>Descargala sin costo</p></div>
-            <div class="link-button"><a href="https://play.google.com/store/apps/details?id=com.TotalPlay.totalplay&hl=es_MX">Descargar</a></div>
+            <div class="link-button button2"><a href="https://play.google.com/store/apps/details?id=com.TotalPlay.totalplay&hl=es_MX">Descargar</a></div>
         </section>
 
         <section class="telefonia" id="telefonia">
@@ -424,7 +444,7 @@
             <div class="eslogan-app"><h1>Tu linea de siempre,<span> ahora va contigo.</span> </h1></div>
             <div class="img-telefonia"><img src="asset/img/telefonia.png" alt="Imagen de telefonia totalplay" loading="lazy"></div>
             <div class="text-fin"><p>Utiliza los minutos incluidos en tu plan. Realiza y recibe llamadas desde nuestra app móvil.</p></div>
-            <div class="link-button"><a href="#paquetes">Ver paquetes</a></div>
+            <div class="link-button button2"><a href="#paquetes">Ver paquetes</a></div>
 
         </section>
     </main>
